tests/parsing/smtlib/poly/errors/018_sorted_var_list_bad_sorted_var_1.psmt2
(set-logic ALL)
(assert (forall (_) true))
