tests/parsing/smtlib/poly/errors/018_sorted_var_list_bad_sorted_var_1.expected
File "tests/parsing/smtlib/poly/errors/018_sorted_var_list_bad_sorted_var_1.psmt2", line 2, character 17-18:
Error while parsing a term, read the reserved word '_',
      but expected a sorted variable of the form "(var sort)".
